thanos/thanos/other/all-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: alertmanager
  namespace: thanos
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - host: alertmanager.zhaoxw.work
      http:
        paths:
          - backend:
              service:
                name: alertmanager
                port:
                  number: 9093
            path: /
            pathType: Prefix

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prometheus
  namespace: thanos
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - host: prometheus.zhaoxw.work
      http:
        paths:
          - backend:
              service:
                name: prometheus-headless
                port:
                  number: 9090
            path: /
            pathType: Prefix
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana
  namespace: thanos
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - host: grafana.zhaoxw.work
      http:
        paths:
          - backend:
              service:
                name: grafana
                port:
                  number: 3000
            path: /
            pathType: Prefix
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minio
  namespace: thanos
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - host: minio.zhaoxw.work
      http:
        paths:
          - backend:
              service:
                name: minio
                port:
                  number: 9001
            path: /
            pathType: Prefix

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: thanos-query
  namespace: thanos
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - host: thanos-query.zhaoxw.work
      http:
        paths:
          - backend:
              service:
                name: thanos-query
                port:
                  number: 9090
            path: /
            pathType: Prefix
